fixed layout bug on navbar dropdown menus The width of dropdown menus was either too long or too small. To solve this, the grid-column width was set in px units instead of fr.

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -180,7 +180,7 @@
   .menu__container > .NavDropdown:hover > .NavDropdown__menu {
     display: grid;
     position: absolute;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 185px);
     grid-column-gap: 30px;
     grid-row-gap: 60px;
     background-color: #f8f8f8;
